manifests/grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.tls.certresolver: "le-resolver"
spec:
  tls:
    - hosts:
        - grc.aabuharrus.dev
      secretName: grafana-tls
  rules:
    - host: grc.aabuharrus.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
